// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore-media-from-recycle-bin should handle non-existent media 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`restore-media-from-recycle-bin should restore a media item from recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
